--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,18 +4,25 @@
   <title>SwagShop</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+	<%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'%>
+	<%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' %>  
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if current_order %>
-<p style="border:1px solid black;padding:10px;">
-  You have <%= pluralize current_order.total_items, 'item'%> in your basket which cost
-  <%= number_to_currency current_order.total_before_tax %>.
-  <%= link_to "View basket", basket_path %>
-  <%= link_to "Checkout", checkout_path %>
-  <%= flash[:notice] %>
-</p>
-<% end %>
+
+<%if false%>
+	<% if current_order %>
+	<p style="border:1px solid black;padding:10px;">
+	  You have <%= pluralize current_order.total_items, 'item'%> in your basket which cost
+	  <%= number_to_currency current_order.total_before_tax %>.
+	  <%= link_to "View basket", basket_path %>
+	  <%= link_to "Checkout", checkout_path %>
+	  <%= flash[:notice] %>
+	</p>
+	<% end %>
+<% end %> 
+
 <%= yield %>
 
 </body>
