--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,21 @@
 </head>
 <body>
 
-<%if false%>
-	<% if current_order %>
-	<p style="border:1px solid black;padding:10px;">
-	  You have <%= pluralize current_order.total_items, 'item'%> in your basket which cost
-	  <%= number_to_currency current_order.total_before_tax %>.
-	  <%= link_to "View basket", basket_path %>
-	  <%= link_to "Checkout", checkout_path %>
-	  <%= flash[:notice] %>
-	</p>
-	<% end %>
-<% end %> 
+	<%= render 'layouts/navbar' %>
 
-<%= yield %>
+	<%if false%>
+		<% if current_order %>
+		<p style="border:1px solid black;padding:10px;">
+		  You have <%= pluralize current_order.total_items, 'item'%> in your basket which cost
+		  <%= number_to_currency current_order.total_before_tax %>.
+		  <%= link_to "View basket", basket_path %>
+		  <%= link_to "Checkout", checkout_path %>
+		  <%= flash[:notice] %>
+		</p>
+		<% end %>
+	<% end %> 
+
+	<%= yield %>
 
 </body>
 </html>
